modules/vpc/generated.tf
# # __generated__ by Terraform
# # Please review these resources and move them into your main configuration files.

# # __generated__ by Terraform
# resource "aws_vpc" "this" {
#   assign_generated_ipv6_cidr_block     = false
#   cidr_block                           = "10.0.1.0/24"
#   enable_dns_hostnames                 = false
#   enable_dns_support                   = true
#   enable_network_address_usage_metrics = false
#   instance_tenancy                     = "default"
#   ipv4_ipam_pool_id                    = null
#   ipv4_netmask_length                  = null
#   ipv6_cidr_block                      = null
#   ipv6_cidr_block_network_border_group = null
#   ipv6_ipam_pool_id                    = null
#   ipv6_netmask_length                  = 0
#   tags = {
#     Name = "weijie-test"
#   }
#   tags_all = {
#     Name = "weijie-test"
#   }
# }
